--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==0.12.2
 alembic==0.9.5
 Babel==2.4.0
 bcrypt==3.1.3
+beautifulsoup4==4.6.0
 blinker==1.4
 certifi==2017.4.17
 cffi==1.11.0
@@ -11,6 +11,7 @@ coverage==4.4.1
 cryptography==1.7.1
 decorator==4.1.1
 defusedxml==0.5.0
+Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
