--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.1'
 
 volumes:
   app:
+  db:
 
 services:
   app:
@@ -15,3 +16,15 @@ services:
       - .env
     ports:
      - "8000:5000"
+
+  db:
+    image: postgres
+
+    env_file:
+      - .env
+
+    volumes:
+      - db:/var/lib/postgresql
+
+    ports:
+      - "8432:5432"
